Make sonar happy